# clipsrules

./: .gitignore  CMakeLists.txt
clipsjni/: .gitignore  CMakeLists.txt  notes.org
clipsjni/java-src/: .gitignore  CMakeLists.txt
clipsjni/java-src/CLIPSJNI/: CLIPSTerminal.java  ConsoleRouter.java  ConsoleUTF8Router.java  Environment.java  JTextAreaCommandPromptRouter.java  JTextAreaRouter.java  JavaObjectValue.java  MultifieldValue.java  PrimitiveValue.java
clipsjni/java-src/test/CLIPSJNI/: ArgumentsTest.java  EnvironmentTest.java  ExpressionTest.java  Foo.java
clipsjni/library-src/: .gitignore  CLIPSJNI_Environment.cpp  CMakeLists.txt
core/: .gitignore  CMakeLists.txt  agenda.c  agenda.h  argacces.c  argacces.h  bload.c  bload.h  bsave.c  bsave.h  classcom.c  classcom.h  classfun.c  classfun.h  classpsr.c  classpsr.h  clips.h  clsltpsr.c  clsltpsr.h  commline.c  commline.h  conscomp.h  constrct.c  constrct.h  cstrccom.c  cstrccom.h  cstrcpsr.c  cstrcpsr.h  cstrnchk.c  cstrnchk.h  cstrnpsr.c  cstrnpsr.h  default.c  default.h  defins.c  defins.h  dffctbsc.c  dffctbsc.h  dffctdef.c  dffctdef.h  (+141 more)
microsoft_windows/Source/Integration/: CLIPSJNI_Environment.c
